<resources>
    <string name="app_name">Hub</string>
    
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe (optionel)</string>
    <string name="action_sign_in">Se connecter ou s\'inscrire</string>
    <string name="action_sign_in_short">Se connecter</string>
    <string name="error_invalid_email">Cette adresse email n\'est pas valide</string>
    <string name="error_invalid_password">Ce mot de passe est trop court</string>
    <string name="error_incorrect_password">Ce mot de passe est incorrect</string>
    <string name="error_field_required">Ce champ est requis</string>
    <string name="permission_rationale">"La permission des contacts est nécessaire pour proposer l'autocompletion des emails
    </string>

    <string name="no_channels">Oups vous n\'avez aucun channel</string>
    <string name="add">Ajouter</string>
    <string name="select_channel">Selectionner un channel en ouvrant le menu à gauche</string>
    <string name="add_channel">Ajouter un channel</string>
    <string name="connexion_failed">La connexion a échoué</string>
    <string name="retry">Réessayer</string>
    <string name="addComment">Ajoutez un commentaire</string>
    <string name="auth_failure">Echec de l\'authentification</string>
    <string name="not_authenticated">Vous n\'êtes pas encore authentifié</string>

    <string name="downloading">Téléchargement en cours</string>
    <string name="open_file">Fichier téléchargé</string>
    <string name="file_downloaded">Fichier téléchargé</string>
    <string name="open">Ouvrir</string>


    <string name="search">Rechercher</string>
    <string name="create_event">Créer</string>
    <string name="attach_image">Attacher une image</string>
    <string name="take_picture">Prendre une photo</string>
    <string name="take_video">Prendre une vidéo</string>
    <string name="carpooling">Covoiturage</string>
    <string name="running">Jogging</string>
    <string name="biking">Vélo</string>
    <string name="afterwork">Afterwork</string>
    <string name="infotel_event">Evènement entreprise</string>

    <string name="context_post">Post contextuel</string>

    <string name="location">Lieu</string>
    <string name="unset">Non renseigné</string>
    <string name="channels">Channels</string>

    <string name="start_point">Départ</string>
    <string name="end_point">Arrivée</string>

    <string name="event">Contexte</string>
    <string name="events">Contextes</string>

    <string name="suscribed">Participe</string>
    <string name="not_suscribed">Ne participe pas</string>
    <string name="maybe">Peut-être</string>


    <string name="no_camera_app">Aucune application de caméra installée</string>

    <string name="category">Catégorie</string>
    <string name="image">Image</string>

    <string name="enter_name">Veuillez choisir un nom pour ce post</string>
    <string name="enter_type">Veuillez choisir un type pour ce post</string>
    <string name="enter_location">Veuillez choisir un lieu associé à ce post</string>
    <string name="attachments">Attachements</string>


</resources>
