<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainLayout"
        android:orientation="vertical">
        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_height="128dp"
            android:layout_width="match_parent"
            android:animateLayoutChanges="true">
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:gravity="bottom"
                android:animateLayoutChanges="true"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                android:popupTheme="@style/ThemeOverlay.AppCompat.Light">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:orientation="vertical">
                <EditText
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:layout_marginBottom="8dp"
                    android:textSize="24sp"
                    android:hint="titre du contexte"/>
                </LinearLayout>

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:padding="@dimen/textMarginHorizontal"
                android:animateLayoutChanges="true"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:elevation="@dimen/card_elevation"
                card_view:cardCornerRadius="@dimen/cardview_default_radius">
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:id="@+id/radio"
                android:text="@string/category">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carpooling"
                android:id="@+id/carpooling" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/running"
                    android:id="@+id/running" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/afterwork"
                    android:id="@+id/afterwork" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/infotel_event"
                    android:id="@+id/infotel_event" />
            </RadioGroup>

            </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:padding="@dimen/activity_vertical_margin"
                    android:animateLayoutChanges="true"
                    android:elevation="@dimen/card_elevation"
                    card_view:cardCornerRadius="@dimen/cardview_default_radius">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:alpha="0.54"
                            android:src="@mipmap/ic_image_black_48dp"/>

                    </LinearLayout>


                    </android.support.v7.widget.CardView>

            </LinearLayout>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:padding="@dimen/activity_vertical_margin"
                android:animateLayoutChanges="true"
                android:elevation="@dimen/card_elevation"
                card_view:cardCornerRadius="@dimen/cardview_default_radius">

                <DatePicker
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/datePicker" />
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:padding="@dimen/activity_vertical_margin"
                android:animateLayoutChanges="true"
                android:elevation="@dimen/card_elevation"
                card_view:cardCornerRadius="@dimen/cardview_default_radius">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                        android:name="com.google.android.gms.maps.MapFragment"
                        android:id="@+id/map"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/map_height"/>
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/textMarginHorizontal"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentRight="true"
                            android:onClick="placePicker"
                            android:text="@string/location"/>
                    </RelativeLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </LinearLayout>
    </ScrollView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:onClick="fabClick"
        android:src="@mipmap/ic_send_black_36dp"
        android:tint="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:elevation="@dimen/fab_elevation"
        app:borderWidth="0dp"
        app:rippleColor="@android:color/white"
        app:backgroundTint="@color/colorAccent"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|right|end"
        />

</android.support.design.widget.CoordinatorLayout>
